Fix tagbox for overflow hint

--- a/packages/survey-core/src/default-theme/blocks/sd-tagbox.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-tagbox.scss
@@ -161,6 +161,7 @@
   display: flex;
   flex-grow: 1;
   max-width: 100%;
+  overflow: hidden;
 }
 
 .sd-tagbox__hint-suffix-wrapper {
